--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "build": "turbo build",
     "lint": "turbo lint",
     "test": "turbo test",
-    "clean": "turbo clean"
+    "clean": "turbo clean",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/bun": "^1.3.2",
+    "drizzle-kit": "^0.30.1",
     "eslint": "^9.17.0",
     "turbo": "^2.1.1",
     "typescript": "^5.7.2",
