feat: add election server actions

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "noEmit": true,
+    "baseUrl": ".",
     "isolatedModules": true,
     "incremental": true,
     "plugins": [
