--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.5"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
 
