--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@scrutinium/db": "workspace:*",
     "@scrutinium/ui": "workspace:*",
+    "better-sqlite3": "^11.8.1",
     "class-variance-authority": "^0.7.0",
     "lucide-react": "^0.474.0",
     "next": "16.0.3",
